finished responsiveness.due functionality

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <main>
-        <div>
+        <div class="grid grid-cols-1 lg:grid-cols-4 gap-4">
             <!-- card section -->
             <div class="left-side m-4 lg:col-span-3 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 <div class="bg-[#ffffff] mt-5 rounded-xl p-3">
