--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <div class="flex gap-1">
 
             <div class="flex items-center p-2 rounded-2xl bg-[#41FF6B1A]
-                 gap-1"><span class="font-bold">0</span>
+                 gap-1"><span class="font-bold" id="heart-number">0</span>
                 <img src="./assets/heart.png" alt="" class="h-[20px]">
             </div>
             <div class="flex items-center p-2 rounded-2xl bg-[#41FF6B1A]
-                 gap-1"><span class="font-bold">100</span>
+                 gap-1"><span class="font-bold" id="coin-number">100</span>
                 <img src="./assets/coin.png" alt="" class="h-[20px]">
             </div>
             <div class="flex items-center p-2 rounded-2xl bg-[#00A63E]
@@ -52,23 +52,25 @@
     <main>
         <div class="grid grid-cols-1 lg:grid-cols-4 gap-4">
             <!-- card section -->
-            <div class="left-side m-4 lg:col-span-3 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-                <div class="bg-[#ffffff] mt-5 rounded-xl p-3">
+            <div class="left-side  m-4 lg:col-span-3 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
-                        <i class="fa-regular fa-heart"></i>
+                        <button id="heart-btn">
+                            <i class="fa-regular fa-heart"></i>
+                        </button>
                     </div>
-                    <h2 class="font-bold text-[15px]">National Emergency Number</h2>
+                    <h2 class="font-bold text-[15px]" id="service-name">National Emergency Number</h2>
                     <p class="">National Emergency</p>
                     <span class="font-bold text-[20px]">999</span>
 
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">All</p>
                     <div class="mt-3">
                         <button class="btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="btn btn-accent text-white"><i class="fa-solid fa-phone"></i>Call</button>
+                        <button id="call-btn" class="btn btn-accent text-white"><i class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
-                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 ">
+                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/police.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <i class="fa-regular fa-heart"></i>
@@ -83,7 +85,7 @@
                         <button class="btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
-                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 ">
+                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/fire-service.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <i class="fa-regular fa-heart"></i>
@@ -98,7 +100,7 @@
                         <button class="btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
-                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 ">
+                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/ambulance.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <i class="fa-regular fa-heart"></i>
@@ -113,7 +115,7 @@
                         <button class="btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
-                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 ">
+                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <i class="fa-regular fa-heart"></i>
@@ -128,7 +130,7 @@
                         <button class="btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
-                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 ">
+                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <i class="fa-regular fa-heart"></i>
@@ -145,7 +147,7 @@
                 </div>
             </div>
             <!-- call history -->
-            <div class="bg-[#ffffff] mt-5 rounded-xl p-3 m-4">
+            <div class="bg-[#ffffff] mt-5 rounded-xl p-3 m-4 shadow">
                 <div class="flex justify-between">
                     <div class="flex items-center gap-1">
                         <i class="fa-regular fa-clock"></i>
