--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
-                        <button id="heart-btn">
-                            <i class="fa-regular fa-heart"></i>
+                        <button>
+                            <i class="heart-btn fa-regular fa-heart"></i>
                         </button>
                     </div>
                     <h2 class="font-bold text-[15px]" id="service-name">National Emergency Number</h2>
@@ -67,13 +67,14 @@
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">All</p>
                     <div class="mt-3">
                         <button class="btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button id="call-btn" class="btn btn-accent text-white"><i class="fa-solid fa-phone"></i>Call</button>
+                        <button id="" class="call-btn btn btn-accent text-white"><i
+                                class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
                 <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/police.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
-                        <i class="fa-regular fa-heart"></i>
+                        <i class="heart-btn fa-regular fa-heart"></i>
                     </div>
                     <h2 class="font-bold text-[15px]">Police Helpline Number</h2>
                     <p class="">Police</p>
@@ -82,13 +83,13 @@
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">Police</p>
                     <div class="mt-3">
                         <button class="btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
+                        <button class="call-btn btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
                 <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/fire-service.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
-                        <i class="fa-regular fa-heart"></i>
+                        <i class="heart-btn fa-regular fa-heart"></i>
                     </div>
                     <h2 class="font-bold text-[15px]">Fire Service Number</h2>
                     <p class="">Fire Service</p>
@@ -97,13 +98,13 @@
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">Fire</p>
                     <div class="mt-3">
                         <button class="btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
+                        <button class="call-btn btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
                 <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/ambulance.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
-                        <i class="fa-regular fa-heart"></i>
+                        <i class="heart-btn fa-regular fa-heart"></i>
                     </div>
                     <h2 class="font-bold text-[15px]">Ambulance Service</h2>
                     <p class="">Ambulance</p>
@@ -112,13 +113,13 @@
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">Health</p>
                     <div class="mt-3">
                         <button class="btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
+                        <button class="call-btn btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
                 <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
-                        <i class="fa-regular fa-heart"></i>
+                        <i class="heart-btn fa-regular fa-heart"></i>
                     </div>
                     <h2 class="font-bold text-[15px]">Women & Child Helpline</h2>
                     <p class="">Women & Child Helpline</p>
@@ -127,13 +128,13 @@
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">Help</p>
                     <div class="mt-3">
                         <button class="btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
+                        <button class="call-btn btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
                 <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
-                        <i class="fa-regular fa-heart"></i>
+                        <i class="heart-btn fa-regular fa-heart"></i>
                     </div>
                     <h2 class="font-bold text-[15px]">Anti-Corruption Helpline</h2>
                     <p class="">Anti-Corruption</p>
@@ -142,7 +143,7 @@
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">Govt.</p>
                     <div class="mt-3">
                         <button class="btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
+                        <button class="call-btn btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
             </div>
@@ -153,15 +154,12 @@
                         <i class="fa-regular fa-clock"></i>
                         <h2 class="font-semibold">Call History</h2>
                     </div>
-                    <button class="btn bg-[#00A63E] text-white rounded-2xl"><i
-                            class="fa-solid fa-phone"></i>Call</button>
+                    <button onclick="clearHistory()" class="btn bg-[#00A63E] text-white rounded-2xl"><i
+                            class="fa-solid fa-phone"></i>Clear</button>
                 </div>
                 <div class="flex justify-between items-center">
                     <div>
-                        <h2>Service Name</h2>
-                        <p>999</p>
-                    </div>
-                    <p>11:56 AM</p>
+                        <ul id="historyList" class="space-y-2 text-sm"></ul>
                 </div>
             </div>
         </div>
