--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="container mx-auto bg-[#DFEFFF] border-2 border-red-500">
+<body class="container mx-auto bg-[#DFEFFF]">
     <!-- nav bar -->
     <nav class="bg-white p-2 flex justify-between">
         <div class="flex items-center  gap-3">
@@ -60,9 +60,9 @@
                             <i class="heart-btn fa-regular fa-heart"></i>
                         </button>
                     </div>
-                    <h2 class="font-bold text-[15px]" id="service-name">National Emergency Number</h2>
+                    <h2 class="service-tag font-bold text-[15px]" >National Emergency Number</h2>
                     <p class="">National Emergency</p>
-                    <span class="font-bold text-[20px]">999</span>
+                    <span class="number font-bold text-[20px]">999</span>
 
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">All</p>
                     <div class="mt-3">
@@ -76,9 +76,9 @@
                         <img src="./assets/police.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <i class="heart-btn fa-regular fa-heart"></i>
                     </div>
-                    <h2 class="font-bold text-[15px]">Police Helpline Number</h2>
+                    <h2 class="service-tag font-bold text-[15px]">Police Helpline Number</h2>
                     <p class="">Police</p>
-                    <span class="font-bold text-[20px]">999</span>
+                    <span class="number font-bold text-[20px]">999</span>
 
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">Police</p>
                     <div class="mt-3">
@@ -91,9 +91,9 @@
                         <img src="./assets/fire-service.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <i class="heart-btn fa-regular fa-heart"></i>
                     </div>
-                    <h2 class="font-bold text-[15px]">Fire Service Number</h2>
+                    <h2 class="service-tag font-bold text-[15px]">Fire Service Number</h2>
                     <p class="">Fire Service</p>
-                    <span class="font-bold text-[20px]">999</span>
+                    <span class="number font-bold text-[20px]">999</span>
 
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">Fire</p>
                     <div class="mt-3">
@@ -106,9 +106,9 @@
                         <img src="./assets/ambulance.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <i class="heart-btn fa-regular fa-heart"></i>
                     </div>
-                    <h2 class="font-bold text-[15px]">Ambulance Service</h2>
+                    <h2 class="service-tag font-bold text-[15px]">Ambulance Service</h2>
                     <p class="">Ambulance</p>
-                    <span class="font-bold text-[20px]">1994-999999</span>
+                    <span class="number font-bold text-[20px]">1994-999999</span>
 
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">Health</p>
                     <div class="mt-3">
@@ -121,9 +121,9 @@
                         <img src="./assets/emergency.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <i class="heart-btn fa-regular fa-heart"></i>
                     </div>
-                    <h2 class="font-bold text-[15px]">Women & Child Helpline</h2>
+                    <h2 class="service-tag font-bold text-[15px]">Women & Child Helpline</h2>
                     <p class="">Women & Child Helpline</p>
-                    <span class="font-bold text-[20px]">109</span>
+                    <span class="number font-bold text-[20px]">109</span>
 
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">Help</p>
                     <div class="mt-3">
@@ -136,9 +136,9 @@
                         <img src="./assets/emergency.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <i class="heart-btn fa-regular fa-heart"></i>
                     </div>
-                    <h2 class="font-bold text-[15px]">Anti-Corruption Helpline</h2>
+                    <h2 class="service-tag font-bold text-[15px]">Anti-Corruption Helpline</h2>
                     <p class="">Anti-Corruption</p>
-                    <span class="font-bold text-[20px]">106</span>
+                    <span class="number font-bold text-[20px]">106</span>
 
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">Govt.</p>
                     <div class="mt-3">
@@ -154,8 +154,7 @@
                         <i class="fa-regular fa-clock"></i>
                         <h2 class="font-semibold">Call History</h2>
                     </div>
-                    <button onclick="clearHistory()" class="btn bg-[#00A63E] text-white rounded-2xl"><i
-                            class="fa-solid fa-phone"></i>Clear</button>
+                    <button onclick="clearHistory()" class="btn bg-[#00A63E] text-white rounded-2xl">Clear</button>
                 </div>
                 <div class="flex justify-between items-center">
                     <div>
