--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="container mx-auto bg-[#DFEFFF]">
+<body class="container mx-auto bg-[#DFEFFF] rounded-xl">
     <!-- nav bar -->
     <nav class="bg-white p-2 flex justify-between">
         <div class="flex items-center  gap-3">
@@ -34,7 +34,7 @@
             </div>
             <div class="flex items-center p-2 rounded-2xl bg-[#00A63E]
                  gap-1">
-                <p class="font-bold text-white"><span>2</span>
+                <p class="font-bold text-white"><span id="copy-number">0</span>
                     Copy</p>
             </div>
         </div>
@@ -53,25 +53,26 @@
         <div class="grid grid-cols-1 lg:grid-cols-4 gap-4">
             <!-- card section -->
             <div class="left-side  m-4 lg:col-span-3 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
+                <div class="card-div bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <button>
                             <i class="heart-btn fa-regular fa-heart"></i>
                         </button>
                     </div>
-                    <h2 class="service-tag font-bold text-[15px]" >National Emergency Number</h2>
+                    <h2 class="service-tag font-bold text-[15px]">National Emergency Number</h2>
                     <p class="">National Emergency</p>
                     <span class="number font-bold text-[20px]">999</span>
 
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">All</p>
                     <div class="mt-3">
-                        <button class="btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button type="button" class="copy-btn btn btn-outline "><i
+                                class="fa-regular fa-copy"></i>Copy</button>
                         <button id="" class="call-btn btn btn-accent text-white"><i
                                 class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
-                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
+                <div class="card-div bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/police.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <i class="heart-btn fa-regular fa-heart"></i>
@@ -82,11 +83,12 @@
 
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">Police</p>
                     <div class="mt-3">
-                        <button class="btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="call-btn btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
+                        <button class="copy-btn btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button class="call-btn btn btn-accent text-white "><i
+                                class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
-                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
+                <div class="card-div bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/fire-service.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <i class="heart-btn fa-regular fa-heart"></i>
@@ -97,11 +99,12 @@
 
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">Fire</p>
                     <div class="mt-3">
-                        <button class="btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="call-btn btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
+                        <button class="copy-btn btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button class="call-btn btn btn-accent text-white "><i
+                                class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
-                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
+                <div class="card-div bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/ambulance.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <i class="heart-btn fa-regular fa-heart"></i>
@@ -112,11 +115,12 @@
 
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">Health</p>
                     <div class="mt-3">
-                        <button class="btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="call-btn btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
+                        <button class="copy-btn btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button class="call-btn btn btn-accent text-white "><i
+                                class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
-                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
+                <div class="card-div bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <i class="heart-btn fa-regular fa-heart"></i>
@@ -127,11 +131,12 @@
 
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">Help</p>
                     <div class="mt-3">
-                        <button class="btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="call-btn btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
+                        <button class="copy-btn btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button class="call-btn btn btn-accent text-white "><i
+                                class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
-                <div class="bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
+                <div class="card-div bg-[#ffffff] mt-5 rounded-xl p-3 shadow">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="h-[40px] p-2 rounded-xl bg-[#FFE3E2]">
                         <i class="heart-btn fa-regular fa-heart"></i>
@@ -142,26 +147,27 @@
 
                     <p class="rounded-2xl bg-[#41FF6B1A] w-[50px] flex items-center justify-center">Govt.</p>
                     <div class="mt-3">
-                        <button class="btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
-                        <button class="call-btn btn btn-accent text-white "><i class="fa-solid fa-phone"></i>Call</button>
+                        <button class="copy-btn btn btn-outline "><i class="fa-regular fa-copy"></i>Copy</button>
+                        <button class="call-btn btn btn-accent text-white "><i
+                                class="fa-solid fa-phone"></i>Call</button>
                     </div>
                 </div>
             </div>
             <!-- call history -->
             <div class="bg-[#ffffff] mt-5 rounded-xl p-3 m-4 shadow">
-                <div class="flex justify-between">
+                <div class="flex justify-between mb-2 items-center">
                     <div class="flex items-center gap-1">
                         <i class="fa-regular fa-clock"></i>
                         <h2 class="font-semibold">Call History</h2>
                     </div>
                     <button onclick="clearHistory()" class="btn bg-[#00A63E] text-white rounded-2xl">Clear</button>
                 </div>
-                <div class="flex justify-between items-center">
-                    <div>
-                        <ul id="historyList" class="space-y-2 text-sm"></ul>
+
+                <div>
+                    <ul id="historyList" class="space-y-2 text-sm"></ul>
                 </div>
+
             </div>
-        </div>
     </main>
     <script src="./script.js"></script>
 </body>
